--- a/postagens.html
+++ b/postagens.html
@@ -7,11 +7,9 @@
     <title>Postagens</title>
     <link rel="stylesheet" href="styles/postagens.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="//cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-    <script src="//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="/scripts/post.js"></script>
 </head>
 
@@ -28,15 +26,16 @@
                         </tbody>
 
                     </table>
+                
                 </div>
 
             </main>
             <header>
                 <div>
                     <p>Menu</p>
-                    <ul>
+                    <ul id="menu">
                         
-                        <li><a href="/postagens.html"><img src="/assets/card.svg"><strong>Postagens</strong></a></li>
+                        <li><a href="/postagens.html"><img src="/assets/card.svg"><strong id="opcao">Postagens</strong></a></li>
                         <li><a href="/albuns.html"><img src="/assets/photo.svg"></span><strong>Albuns</strong></a></li>
                         <li><a href="/todos.html"><img src="/assets/global.svg"></span><strong>Todos</strong></a></li>
                         <li><a href="/index.html"><img src="/assets/back.svg"></span><strong>Vontar para home</strong></a>
