--- a/todos.html
+++ b/todos.html
@@ -13,40 +13,50 @@
         crossorigin="anonymous"></script>
     <script src="//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="/scripts/todos.js"></script>
+
 </head>
 
 <body>
     <div id="page-todos">
         <div class="content">
+
             <main>
-                <main>
-                    <h1>Todos</h1>
-                    <div id="tabela">
+                <h1>Todos</h1>
+                <div id="tabela">
 
-                        <table id="corpo" class="display" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>Id</th>
-                                    <th>Post</th>
-                                </tr>
+                    <table id="corpo" class="display" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>
+                                    <h3>Id</h3>
+                                </th>
+                                <th>
+                                    <h3>Usuario</h3>
+                                </th>
+                                <th>
+                                    <h3>Todos</h3>
+                                </th>
+                            </tr>
 
-                            </thead>
-                            <tbody id="todos">
+                        </thead>
+                        <tbody id="todos">
+                            
+                            
+                        </tbody>
 
-                            </tbody>
+                    </table>
+                </div>
 
-                        </table>
-                    </div>
-
-                </main>
             </main>
+
             <header>
                 <div>
                     <p>Menu</p>
                     <ul>
                         <li><a href="/postagens.html"><img src="/assets/card.svg"><strong>Postagens</strong></a></li>
                         <li><a href="/albuns.html"><img src="/assets/photo.svg"></span><strong>Albuns</strong></a></li>
-                        <li><a href="/todos.html"><img src="/assets/global.svg"></span><strong>Todos</strong></a></li>
+                        <li><a href="/todos.html"><img src="/assets/global.svg"></span><strong
+                                    id="opcao">Todos</strong></a></li>
                         <li><a href="/index.html"><img src="/assets/back.svg"></span><strong>Vontar para
                                     home</strong></a></li>
                     </ul>
