--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Desafio</title>
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 
 <body>
@@ -19,14 +20,14 @@
             <header>
                 <div>
                     <p>Menu</p>
-                <ul>
-                    <li><a href="/postagens.html"><img src="/assets/card.svg"><strong>Postagens</strong></a></li>
-                    <li><a href="/albuns.html"><img src="/assets/photo.svg"></span><strong>Albuns</strong></a></li>
-                    <li><a href="/todos.html"><img src="/assets/global.svg"></span><strong>Todos</strong></a></li>
-                    
-                </ul>
+                    <ul>
+                        <li><a href="/postagens.html"><img src="/assets/card.svg"><strong>Postagens</strong></a></li>
+                        <li><a href="/albuns.html"><img src="/assets/photo.svg"><strong>Albuns</strong></a></li>
+                        <li><a href="/todos.html"><img src="/assets/global.svg"><strong>Todos</strong></a></li>
+
+                    </ul>
                 </div>
-                
+
             </header>
 
         </div>
