--- a/albuns.html
+++ b/albuns.html
@@ -7,7 +7,7 @@
     <title>Albuns</title>
     <link rel="stylesheet" href="styles/albuns.css">
     <link rel="stylesheet" href="styles/main.css">
-    
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -44,9 +44,9 @@
                     <p>Menu</p>
                     <ul>
                         <li><a href="/postagens.html"><img src="/assets/card.svg"><strong >Postagens</strong></a></li>
-                        <li><a href="/albuns.html"><img src="/assets/photo.svg"></span><strong id="opcao">Albuns</strong></a></li>
-                        <li><a href="/todos.html"><img src="/assets/global.svg"></span><strong>Todos</strong></a></li>
-                        <li><a href="/index.html"><img src="/assets/back.svg"></span><strong>Vontar para
+                        <li><a href="/albuns.html"><img src="/assets/photo.svg"><strong id="opcao">Albuns</strong></a></li>
+                        <li><a href="/todos.html"><img src="/assets/global.svg"><strong>Todos</strong></a></li>
+                        <li><a href="/index.html"><img src="/assets/back.svg"><strong>Voltar para
                                     home</strong></a></li>
                     </ul>
                 </div>
