--- a/todos.html
+++ b/todos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/todos.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -54,10 +55,10 @@
                     <p>Menu</p>
                     <ul>
                         <li><a href="/postagens.html"><img src="/assets/card.svg"><strong>Postagens</strong></a></li>
-                        <li><a href="/albuns.html"><img src="/assets/photo.svg"></span><strong>Albuns</strong></a></li>
-                        <li><a href="/todos.html"><img src="/assets/global.svg"></span><strong
+                        <li><a href="/albuns.html"><img src="/assets/photo.svg"><strong>Albuns</strong></a></li>
+                        <li><a href="/todos.html"><img src="/assets/global.svg"><strong
                                     id="opcao">Todos</strong></a></li>
-                        <li><a href="/index.html"><img src="/assets/back.svg"></span><strong>Vontar para
+                        <li><a href="/index.html"><img src="/assets/back.svg"><strong>Voltar para
                                     home</strong></a></li>
                     </ul>
                 </div>
